Serving Static Files

--- a/Express/public/index.html
+++ b/Express/public/index.html
@@ -2,9 +2,25 @@
 <html>
     <head>
         <title>MEAN hotel</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="css/custom.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1>MEAN hotel homepage</h1>
+
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted text-center">
+                    <a href="http://swan.moe" target="_blank"><img src="img/logo.png" height="25" alt="Swan"/></a>
+                </p>
+
+                <p class="text-muted text-center">
+                    <small>&copy; 2017 Swan. All Rights Reserved. </small>
+                </p>
+            </div>
+        </footer>
+
+        <script scrc="jquery/jquery-3.1.1.min.js"></script>
     </body>
 
 </html>
