--- a/Express/public/index.html
+++ b/Express/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="meanhotel">
     <head>
         <title>MEAN hotel</title>
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="css/custom.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>MEAN hotel homepage</h1>
+       
+       <div ng-view></div>
 
         <footer class="footer">
             <div class="container">
@@ -20,7 +21,10 @@
             </div>
         </footer>
 
-        <script scrc="jquery/jquery-3.1.1.min.js"></script>
+        <script src="jquery/jquery-3.1.1.min.js"></script>
+        <script src="node_modules/angular/angular.js"></script>
+        <script src="node_modules/angular-route/angular-route.js"></script>
+        <script src="angular-app/app.js"></script>
     </body>
 
 </html>
