--- a/Express/public/angular-app/hotel-display/hotel.html
+++ b/Express/public/angular-app/hotel-display/hotel.html
@@ -1,2 +1,36 @@
-<h1>Information on {{ vm.hotel.name }}</h1>
+<h1>{{ vm.hotel.name }} - <hotel-rating stars="vm.stars"></hotel-rating> stars</h1>
 <p><strong>Description:</strong> {{ vm.hotel.description }}</p>
+
+<br/>
+
+<h2>This hotel offers the following services:</h2>
+<ul>
+    <li ng-repeat="service in vm.hotel.services">{{ service }}</li>
+</ul>
+
+<br/
+
+<h2>Reviews</h2>
+<ul>
+    <li ng-repeat="review in vm.hotel.reviews"><strong>{{ review.name }} says:</strong> {{ review.review }}</li> 
+</ul>
+
+<form name="vm.reviewForm" ng-submit="vm.addReview()">
+    Your name: <input type="text" name="name" required ng-minlength="2" ng-model="vm.name">
+    <div ng-show="vm.reviewForm.name.$dirty && vm.reviewForm.name.$invalid && vm.isSubmitted">
+        <p>Name should be more than 2 characters long.</p>
+    </div>
+
+    Your Rating: <input type="number" name="rating" required ng-pattern="/^[1-5]$/" ng-model="vm.rating">
+    <div ng-show="vm.reviewForm.rating.$dirty && vm.reviewForm.rating.$invalid && vm.isSubmitted">
+        <p>Rating must be between 1-5.</p>
+    </div>
+
+    Your review: <textarea name="review" required ng-model="vm.review"></textarea>
+    <div ng-show="vm.reviewForm.review.$dirty && vm.reviewForm.review.$invalid && vm.isSubmitted">
+        <p>Please add a review</p>
+    </div>
+
+    <button type="submit" class="btn">Add Review</button>        
+
+</form>
